--- a/src/app/components/general/carousel/carousel.mixin.scss
+++ b/src/app/components/general/carousel/carousel.mixin.scss
@@ -1,14 +1,14 @@
-@import 'src/scss/variables.scss';
-@import 'src/scss/mixins.scss';
+@use "src/scss/variables.scss" as variables;
+@use "src/scss/mixins.scss" as mixins;
 
 @mixin arrow($direction, $transform) {
     #{$direction}:0;
     & div {
         position:absolute;
         top:50%;
-        @include transition(#{$direction},-15%);
+        @include mixins.transition(#{$direction},-15%);
         & i {
-            #{$direction}:$elem-padding;
+            #{$direction}:variables.$elem-padding;
             transform: rotate(#{$transform});
             -webkit-transform: rotate(#{$transform});
         }
